--- a/datearith/app/CMakeLists.txt
+++ b/datearith/app/CMakeLists.txt
@@ -1,1 +1,4 @@
 add_executable(printdur printdur.cpp)
+target_link_libraries(printdur datearith)
+add_executable(printdate printdate.cpp)
+target_link_libraries(printdate datearith)
